<resources>
    <string name="app_name">Intencity</string>
    <string name="app_name_prefix">Inten</string>
    <string name="app_name_suffix">city</string>
    <string name="website_suffix">.fit</string>
    <string name="copyright">&#169; Intencity 2016. All Rights Reserved.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_description">Thank you for using Intencity; the fitness app designed to help you with your everyday fitness needs.\n\nPlease let us know of any issues or improvements you may have.\n\n—The Intencity Team</string>
    <string name="get_started">Get Started</string>
    <string name="demo_description">A fitness app designed to help you achieve your fitness goals.</string>
    <string name="demo_fitness_guru_title">Fitness Guru</string>
    <string name="demo_fitness_guru_description">Effectively exercise with routines generated by Intencity\'s algorithm.</string>
    <string name="demo_fitness_direction_title">Get Directions</string>
    <string name="demo_fitness_direction_description">Get step-by-step directions on how to do each exercise.</string>
    <string name="demo_fitness_log_title">Log Your Progress</string>
    <string name="demo_fitness_log_description">Let Intencity remember your last set, so you can get back to your goal.</string>
    <string name="demo_ranking_title">Weekly Competitions</string>
    <string name="demo_ranking_description">Have a friendly, fitness competition with your friends.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_button">Terms of Use &amp; Privacy Policy</string>
    <string name="terms_agreement">By using Intencity, you agree to the @Terms of Use@ and @Privacy Policy@.</string>
    <string name="terms_login">By signing in, you agree to the @Terms of Use@ and @Privacy Policy@.</string>
    <string name="terms_create_account">By creating an account, you agree to the @Terms of Use@ and @Privacy Policy@.</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="reset_password_message">Enter your email, and we\'ll send you a new password.</string>
    <string name="forgot_password_email_sent_title">Password reset</string>
    <string name="forgot_password_email_sent">Please check your email for your new password.</string>
    <string name="reset">RESET PASSWORD</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="separator">&#183;</string>
    <string name="create_account">Create an account</string>
    <string name="convert_account">Convert Trial Account to Full Account</string>
    <string name="title_convert_account">Convert Account</string>
    <string name="title_create_account">Create Account</string>
    <string name="create_account_description">Sign up below for the best possible experience with Intencity.</string>
    <string name="create_account_promise">We promise we won\'t send you spam.</string>
    <string name="title_terms">Terms of Use</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_set_equipment">Would you like to change your exercise equipment?</string>
    <string name="title_button_set_equipment">SET EQUIPMENT</string>
    <string name="login_error_title">Error logging in</string>
    <string name="login_error_message">Please check your email and password, and try again.</string>
    <string name="generic_error">A problem occurred</string>
    <string name="fill_in_fields">Please fill in all fields.</string>
    <string name="email_validation_error">Please enter a valid email.</string>
    <string name="email_match_error">Emails do not match.</string>
    <string name="email_exists">Email already exists.</string>
    <string name="password_match_error">Passwords do not match.</string>
    <string name="password_validation_error">Passwords must be between 8 and 40 characters and cannot contain &lt; &gt; " = +</string>
    <string name="field_validation_error">Fields cannot contain &lt; &gt; " = +</string>
    <string name="success">Success</string>
    <string name="account_converted">Your trial account has been converted into a full account!</string>
    <string name="title_rankings">Leaderboard</string>
    <string name="title_fitness_guru">Fitness Guru</string>
    <string name="title_menu">Menu</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_done">DONE</string>
    <string name="menu_edit">EDIT</string>
    <string name="title_info">Info</string>
    <string name="title_app">App</string>
    <string name="title_checkbox">Select</string>
    <string name="search_exercise">Search for an exercise</string>
    <string name="search_exercise_not_found">Intencity doesn\'t have directions for this exercise.</string>
    <string name="search_user">Search for a user</string>
    <string name="no_results">No results to display.</string>
    <string name="points">POINTS</string>
    <string name="no_friends">We couldn\'t find the users you follow.</string>
    <string name="rankings_updated">Approximate ranking reset:\n%1$s</string>
    <string name="awards_title">Awards</string>
    <string name="profile_routines_title">Last 7 day routines</string>
    <string name="profile_pic_dialog_title">Profile picture</string>
    <string name="profile_pic_dialog_message">How would you like to set your profile picture?</string>
    <string name="profile_pic_dialog_camera_button">Take a picture</string>
    <string name="profile_pic_dialog_pictures_button">Open my photos</string>
    <string name="empty_profile_awards">No activity found.</string>
    <string name="routine_level_beginner">BEGINNER</string>
    <string name="routine_level_advanced">ADVANCED</string>
    <string name="routine_level_expert">EXPERT</string>
    <string name="menu_save">SAVE</string>
    <string name="title_routine">What routine would you like to do?</string>
    <string name="routine_continue">CONTINUE %1$s</string>
    <string name="title_custom_routine">Custom Routine</string>
    <string name="title_custom_routines">Custom Routines</string>
    <string name="title_featured_routines">Featured Routines</string>
    <string name="title_default_routines">Default Routines</string>
    <string name="title_saved_routines">Saved Routines</string>
    <string name="description_custom_routines">BUILD A ROUTINE AS YOU EXERCISE</string>
    <string name="description_default_routine">SELECT FROM %1$s ROUTINE</string>
    <string name="description_default_routines">SELECT FROM %1$s ROUTINES</string>
    <string name="intencity_routine_description">Intencity\'s algorithm is utilized to generate routines. Users also have the ability to input exercises.</string>
    <string name="user_routine_description">These routines have a consecutive set of exercises. Users also have the ability to input exercises.</string>
    <string name="edit_custom_routines_title">Edit Custom Routines</string>
    <string name="edit_routines_description1">Below are the custom routines you have created.</string>
    <string name="edit_routines_description2">Only checked routines will be kept when hitting \'Save\'.</string>
    <string name="edit_saved_title">Edit Saved Routines</string>
    <string name="edit_saved_description">Below are the routines you have saved.</string>
    <string name="no_custom_routines">No custom routines found.</string>
    <string name="add_routines_title">Add Routine</string>
    <string name="add_routines_description">Select the muscle groups you would like in this routine.</string>
    <string name="muscle_group_limit_title">Limit error</string>
    <string name="muscle_group_limit_description">Please select at least 1 muscle group for this routine.</string>
    <string name="edit_equipment_location_names_title">Edit Equipment Location Names</string>
    <string name="edit_equipment_description_save">Only checked locations will be kept when hitting \'Save\'.</string>
    <string name="edit_equipment_description_select_location">Intencity couldn\'t find your fitness location. Please select a fitness location, or create a new one.</string>
    <string name="routine_saved_title">Save current routine</string>
    <string name="routine_saved_description">Give this routine a name so you can do it again at a later date.</string>
    <string name="routine_saved_title_error">Couldn\'t save routine</string>
    <string name="routine_saved_description_error">You either entered a routine name you\'ve already used or there was a problem communicating with Intencity\'s server. Please try again.</string>
    <string name="routine_saved_routine_name_error">A routine name is required. Please try again.</string>
    <string name="save">Save</string>
    <string name="routine_saved">%1$s was saved.</string>
    <string name="no_saved_routine_title">No saved routines</string>
    <string name="no_saved_routine_message">You removed all your saved routines.</string>
    <string name="routine_total_description">Completed Exercises: %1$d\nExercises in Routine: %2$d</string>
    <string name="action_button_directions_add_prefix">+</string>
    <string name="action_button_directions">HOLD</string>
    <string name="undo_hide_exercise_title">You removed %1$s from today\'s workout.</string>
    <string name="undo_hide_button">UNDO</string>
    <string name="menu_remove">REMOVE</string>
    <string name="more_priority_string">You will see %1$s more.</string>
    <string name="less_priority_string">You will see %1$s less.</string>
    <string name="how_to_workout_title">What is your fitness goal?</string>
    <string name="gain">GAIN</string>
    <string name="sustain">SUSTAIN</string>
    <string name="lose">LOSE</string>
    <string name="tone">TONE</string>
    <string name="recommendations">FITNESS RECOMMENDATIONS</string>
    <string name="weight_title">Weight:</string>
    <string name="asterisk">*</string>
    <string name="weight_description">The difficulty of weight is relative to each person. Low weight for one person might be heavy weight for another person. Choose your weight carefully.</string>
    <string name="rest_title">REST BETWEEN EXERCISES</string>
    <string name="cardio_day_title">CARDIO DAY</string>
    <string name="weight_gain">medium–high</string>
    <string name="duration_gain">3–5 reps or 30 seconds</string>
    <string name="rest_gain">2–2.5 minutes</string>
    <string name="cardio_day_gain">~25 minutes total</string>
    <string name="weight_sustain">medium</string>
    <string name="duration_sustain">8–10 reps or 45 seconds</string>
    <string name="rest_sustain">1.5–2 minutes</string>
    <string name="cardio_day_sustain">~30 minutes total</string>
    <string name="weight_lose">low–medium</string>
    <string name="title_weight">WEIGHT</string>
    <string name="title_duration">DURATION</string>
    <string name="title_reps">REPS</string>
    <string name="title_intensity">INTENSITY</string>
    <string name="note_hint">Notes&#8230;</string>
    <string name="dialog_fitness_location_description">When at this location, Intencity will automatically use the fitness equipment associated with it.</string>
    <string name="dialog_fitness_display_name">Name (Home, Gym, etc.)</string>
    <string name="dialog_fitness_location">Address</string>
    <string name="delete_account_message">If you really want to delete your account, type your password below and click, \"DELETE MY ACCOUNT\".</string>
    <string name="delete_account_button">DELETE MY ACCOUNT</string>
    <string name="powered_by_google">Powered by Google</string>
</resources>