<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:title="@string/menu_edit"
        android:icon="@mipmap/ic_pencil_white"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/remove"
        android:title="@string/menu_remove"
        android:icon="@mipmap/ic_minus_circle_outline_white"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/save"
        android:title="@string/menu_save"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/done"
        android:title="@string/menu_done"
        android:visible="false"
        app:showAsAction="always"/>

</menu>