<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/layout_margin_three_quarters"
    android:paddingBottom="@dimen/layout_margin_three_quarters"
    android:paddingLeft="@dimen/layout_margin_dialog"
    android:paddingRight="@dimen/layout_margin_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_half"
        android:text="@string/dialog_fitness_location_description"
        android:textColor="@android:color/black"
        android:textSize="@dimen/card_title_size" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/routine_name_characters"
            android:maxLength="@integer/routine_name_length"
            android:hint="@string/dialog_fitness_display_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_fitness_location" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/card_title3_size"
            android:textStyle="bold"
            android:text="@string/powered_by_google"
            android:textColor="@color/secondary_light"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>