<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/page_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/intencity_sign_in_logo"
            android:paddingTop="@dimen/layout_margin"
            android:paddingRight="@dimen/logo_margin"
            android:paddingBottom="@dimen/logo_margin"
            android:background="@drawable/button_card"
            android:paddingLeft="@dimen/logo_margin"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/card"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_light"
            android:textCursorDrawable="@drawable/cursor"
            android:padding="@dimen/element_margin"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/card"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_light"
            android:textCursorDrawable="@drawable/cursor"
            android:layout_marginTop="@dimen/related_item_margin"
            android:padding="@dimen/element_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:background="@drawable/button_card"
                android:padding="@dimen/card_button_padding"
                android:layout_marginBottom="@dimen/layout_margin"
                android:textSize="@dimen/card_title2_size"
                android:textColor="@color/primary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/separator"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:padding="@dimen/card_button_padding"
                android:background="@drawable/button_card"
                android:textSize="@dimen/card_title2_size"
                android:textColor="@color/primary"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/button_full"
            android:textColor="@color/page_background"
            android:layout_marginBottom="@dimen/layout_margin_quarter"
            android:padding="@dimen/element_margin"/>

        <TextView
            android:id="@+id/btn_try_intencity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_intencity"
            android:background="@drawable/button_card"
            android:padding="@dimen/card_button_padding"
            android:layout_marginBottom="@dimen/layout_margin"
            android:textStyle="bold"
            android:textColor="@color/primary"/>

    </LinearLayout>

</ScrollView>