<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--<include layout="@layout/divider"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/layout_margin_half"
        android:layout_marginRight="@dimen/layout_margin_half"
        android:padding="@dimen/layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_margin_half">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.25"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_weight"
                android:gravity="center"
                android:textSize="@dimen/card_title3_size"
                android:textColor="@color/secondary_dark"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_reps"
                android:gravity="center"
                android:textSize="@dimen/card_title3_size"
                android:textColor="@color/secondary_dark"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_intensity"
                android:gravity="center"
                android:textSize="@dimen/card_title3_size"
                android:textColor="@color/secondary_dark"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/parent_layout_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <include layout="@layout/divider"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:textColor="@color/secondary_dark"
            android:layout_marginTop="@dimen/layout_margin"
            android:padding="@dimen/layout_margin"
            android:background="@drawable/edit_text_flat"/>

    </LinearLayout>

</LinearLayout>