<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_margin"
    android:gravity="center"
    android:background="@color/page_background"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <include
        layout="@layout/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"/>

    <LinearLayout
        android:id="@+id/linear_layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_message"
            android:background="@drawable/button_card"
            android:textColor="@color/secondary_light"
            android:layout_marginBottom="@dimen/layout_margin_half"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/edit_text_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/card"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_light"
            android:textCursorDrawable="@drawable/cursor"
            android:padding="@dimen/element_margin"/>


        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_button"
            android:background="@drawable/button_full"
            android:textColor="@color/page_background"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:padding="@dimen/element_margin"/>

    </LinearLayout>

</LinearLayout>