<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/layout_margin"
    android:gravity="center"
    android:background="@color/page_background"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/intencity_logo"
        android:paddingTop="@dimen/layout_margin"
        android:paddingRight="@dimen/logo_margin"
        android:paddingBottom="@dimen/logo_margin"
        android:background="@drawable/button_card"
        android:paddingLeft="@dimen/logo_margin"/>

    <include layout="@layout/progress_bar" />

    <LinearLayout
        android:id="@+id/linear_layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_message"
            android:layout_marginBottom="@dimen/layout_margin_half"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/card"
            android:textColor="@color/secondary_dark"
            android:textColorHint="@color/secondary_light"
            android:textCursorDrawable="@drawable/cursor"
            android:padding="@dimen/element_margin"/>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="@drawable/button_full"
            android:textColor="@color/page_background"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:padding="@dimen/element_margin"/>

    </LinearLayout>

</LinearLayout>